defmt/tests/ui/derive-invalid-attr-arg.stderr
error: expected `Debug2Format` or `Display2Format`
 --> $DIR/derive-invalid-attr-arg.rs:3:13
  |
3 |     #[defmt(FooBar)]
  |             ^^^^^^
