defmt/tests/ui/derive-invalid-attr-arg.rs
#[derive(defmt::Format)]
struct S {
    #[defmt(FooBar)]
    f: bool,
}

fn main() {}
